<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_controller</name>
  <version>0.0.0</version>
  <description>The turtlesim_controller package</description>
  <maintainer email="fukatsuren88@gmail.com">RenFukatsu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

</package>
